# monads.ai

./: .gitignore  Cargo.toml  README.MD
src/: main.rs
